wrote some summaries

--- a/tex/notation.tex
+++ b/tex/notation.tex
@@ -32,7 +32,11 @@ Table \ref{tab:notation} gives details on this notation.
 		\hline
 		$ \underline{v} $ & A vector (either contravariant or covariant). \tabularnewline
 		\hline
-		$ M = \left( m_{ij} \right) $ & A matrix. \tabularnewline
+		$ M \,=\, \left( m_{ij} \right) $ & A matrix $M$ with elements $m_{ij}$. \tabularnewline
+		\hline
+		$ M^t \,=\, \left( m_{ji} \right) $ & Transpose of matrix $M$. \tabularnewline
+		\hline
+		$ M^{-1} $ & Inverse of matrix $M$. \tabularnewline
 		\hline
 		$\left| x \right> \,=\, \left( x^i \right) $ & A contravariant vector with superscript index. \tabularnewline
 		\hline
