--- a/tex/paths.tex
+++ b/tex/paths.tex
@@ -313,5 +313,10 @@ The two tasks comprise these following steps:
 
 
 \section{Summary}
-
-TODO
+Different approaches to path-finding for a robotic system were discussed in this chapter.
+The best strategy to the problem at hand is a Voronoi-diagram based construction of
+a mesh of possible paths and an application of the classic Dijkstra algorithm for 
+finding a specific path on the mesh.
+An algorithm for such a task was introduced on a very general level.
+Describing the details of this algorithm together with an implementation in C++  
+will be left to the next chapter.
