--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -923,6 +923,17 @@
 
 @misc
 {
+	web_mcstas_templateTAS,
+	title = {{TemplateTAS.instr virtual triple-axis spectrometer, part of McStas \cite{McStas2020, McStas2021} (Software)}},
+	author = {Emmanuel Farhi},
+	year = {2006},
+	url = "https://github.com/McStasMcXtrace/McCode/blob/master/mcstas-comps/examples/templateTAS.instr",
+	note = "[Online; accessed 6-September-2021]",
+}
+
+
+@misc
+{
 	web_boost,
 	title = {{Boost C++ Libraries (Software)}},
 	author = {{Various Authors}},
