--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -241,6 +241,17 @@
 
 @book
 {
+	FUH_prog2019,
+        author = {Friedrich Steimann and Daniela Keller},
+        title = {{Manuscript of the course 01853, ``Moderne Programmiertechniken und -methoden''}},
+        year = {winter semester 2019/2020},
+        publisher = {{FernUniversit\"at in Hagen, Fakult\"at f\"ur Mathematik und Informatik, Hagen, Germany}},
+        url = {https://vu.fernuni-hagen.de/lvuweb/lvu/app/Kurs/1853}
+}
+
+
+@book
+{
 	Erickson2019,
 	author = {Jeff Erickson},
 	title = {{Algorithms, 1st edition}},
@@ -248,6 +259,31 @@
 	publisher = {},
 	isbn = {978-1-792-64483-2},
 	url = {http://jeffe.cs.illinois.edu/teaching/algorithms/}
+}
+
+
+@book
+{
+	Berghammer2017,
+	author = {Rudolf Berghammer},
+	title = {{Mathematik f\"ur die Informatik, Grundlegende Begriffe, Strukturen und ihre Anwendung, 2. Auflage}},
+	year = {2017},
+	publisher = {Springer Vieweg, Wiesbaden, Germany},
+	isbn = {978-3-658-16712-7},
+	doi = {10.1007/978-3-658-16712-7},
+}
+
+
+@book
+{
+	Klein2005,
+	author = {Rolf Klein},
+	title = {{Algorithmische Geometrie, Grundlagen, Methoden, Anwendungen, 2. Auflage}},
+	year = {2005},
+	publisher = {Springer-Verlag Berlin Heidelberg, Germany},
+	isbn = {978-3-540-20956-0},
+	doi = {10.1007/3-540-27619-X},
+	issn = {1614-5216},
 }
 
 
