--- a/tex/interfaces.tex
+++ b/tex/interfaces.tex
@@ -341,8 +341,8 @@ used to set-up the instrument scattering senses and a single-crystal coordinate 
 Finally, the path builder class, which has been described in chapter \ref{sec:buildpath}, is created on line 64 
 and used in the rest of the script to calculate the path mesh as well as the concrete path between the 
 given crystal coordinate points.
-The results of the script are shown in Fig. \ref{fig:pyworkflow}, where we employ \textit{Matplotlib} \cite{web_matplotlib} 
-to plot the calculated path and the obstacles in configuration space.
+The results of the script are shown in Fig. \ref{fig:pyworkflow}, where we employ \textit{Matplotlib} 
+\cite{Hunter2007, web_matplotlib} to plot the calculated path and the obstacles in configuration space.
 
 \begin{figure}[htb]
 		\begin{center}
@@ -350,7 +350,7 @@ to plot the calculated path and the obstacles in configuration space.
 		\end{center}
 	\caption[Python workflow results.]{Results from the \textit{Python} workflow example of listings
 		\ref{lst:pyworkflow1}, \ref{lst:pyworkflow2} and \ref{lst:pyworkflow3}, directly plotted 
-		in \textit{Python} using \textit{Matplotlib} \cite{web_matplotlib}.
+		in \textit{Python} using \textit{Matplotlib} \cite{Hunter2007, web_matplotlib}.
 		The obstacles are shown as red regions, the calculated instrument path is shown as a blue curve.
 		\label{fig:pyworkflow}}
 \end{figure}
