--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -604,6 +604,22 @@
 	url = {https://www.sciencedirect.com/science/article/pii/S0166218X00002389},
 }
 
+
+@article
+{
+	Hunter2007,
+	author = {Hunter, J. D.},
+	title = {{Matplotlib: A 2D graphics environment}},
+	journal = {Computing in Science \& Engineering},
+	volume = {9},
+	number = {3},
+	pages = {90-95},
+	doi = {10.1109/MCSE.2007.55},
+	year = {2007},
+	publisher = {IEEE Computer SOC},
+	issn = {1558-366X},
+}
+
 % -----------------------------------------------------------------------------
 
 
