--- a/tex/implementation.tex
+++ b/tex/implementation.tex
@@ -10,12 +10,15 @@
 
 In this chapter we describe the individual steps of the path-finding strategy (see p. \pageref{sec:strategy}) 
 in detail and present an implementation in C++ \cite{Stroustrup2008, Stroustrup2018}. 
-Specifically, the latest version 20 of the C++ standard \cite{ISOCPP20} was employed in the creation of the software
-together with the Boost C++ template libraries \cite{web_boost}. The source code for the implementation
-can be found in the directory \lstinline|./src/core| together with the library routines in \lstinline|./src/libs|
-of the repository at \url{https://code.ill.fr/scientific-software/takin/paths}. Stable versions of the
-source code have furthermore been registered under the DOI \href{https://doi.org/10.5281/zenodo.4625649}{10.5281/zenodo.4625649},
-please refer to chapter \ref{ch:online} for details.
+Specifically, the latest version 20 of the C++ standard \cite{ISOCPP20}
+together with the Boost C++ template libraries \cite{web_boost}
+was employed in the creation of the software. 
+The source code for the implementation can be found in the directory \lstinline|./src/core| 
+together with the library routines in \lstinline|./src/libs| of the repository at 
+\url{https://code.ill.fr/scientific-software/takin/paths}. 
+Stable versions of the source code have furthermore been registered under the DOI 
+\href{https://doi.org/10.5281/zenodo.4625649}{10.5281/zenodo.4625649}, please also refer to 
+chapter \ref{ch:online} for more details.
 
 Section \ref{sec:tasmodel} is dedicated to modelling the triple-axis spectrometer (TAS), 
 section \ref{sec:buildpath} discusses the steps involved in building up the mesh of possible instrument paths, 
