--- a/tex/paths.tex
+++ b/tex/paths.tex
@@ -145,9 +145,9 @@ This comes at the cost of the shape of the walls becoming more complicated when
 transformed into configuration space, they may not even be simply-connected 
 any more in that space. 
 There are two choices for such a configuration space: We can either use the 
-reciprocal crystal coordinates as discussed in chapter \ref{ch:xtal} or use a 
-configuration space comprised of the instrumental angles.
-We discuss both of these cases in the following sections.
+reciprocal crystal coordinates as discussed in chapter \ref{ch:xtal}, or use a 
+configuration space comprising the instrumental angles.
+We discuss both of these cases in this and the following section.
 
 Using the reciprocal crystal coordinates as configuration space would need a 
 transformation of the walls into the four-dimensional reciprocal space 
@@ -170,7 +170,7 @@ angles that it moves are only the sample scattering and the sample crystal angle
 Of these, only the scattering angle actually moves an instrument arm, the crystal
 angle is just the internal rotation on the axis.
 As can be seen in Fig. \ref{fig:tas_wall} (b), the instrument cannot move
-around obstacles, but is locked on isolated regions of the configuration space.
+around obstacles, but is locked in isolated regions of the configuration space.
 To have enough degrees of freedom for path finding, we would need to include
 a third coordinate axis, the energy.
 As a further negative aspect, this configuration space is dependent on the 
@@ -203,7 +203,7 @@ A further simplification is possible when taking into account that during a
 typical experiment the instrument usually only moves either its monochromator 
 or analyser angle to choose the energy transfer, but not both. 
 Therefore, one of these angles, usually the analyser angle, rests at a constant 
-value. In total, we are left with a two-dimensional configuration space comprised 
+value. In total, we are left with a two-dimensional configuration space composed 
 of the monochromator and the sample scattering angle. 
 A typical situation is shown in Fig. \ref{fig:tas_wall} (a and c). 
 As before, the instrument motion is blocked by an obstacle in the experimental zone. 
