--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -852,6 +852,50 @@
 
 @misc
 {
+	wiki_redblack,
+	author = "{Wikipedia contributors}",
+	title = {{Red–black tree --- {Wikipedia}{,} The Free Encyclopedia}},
+	year = "2021",
+	url = "https://en.wikipedia.org/w/index.php?title=Red%E2%80%93black_tree&oldid=1040512053",
+	note = "[Online; accessed 9-September-2021]"
+}
+
+
+@misc
+{
+	wiki_avl,
+	author = "{Wikipedia contributors}",
+	title = {{AVL tree --- {Wikipedia}{,} The Free Encyclopedia}},
+	year = "2021",
+	url = "https://en.wikipedia.org/w/index.php?title=AVL_tree&oldid=1040769903",
+	note = "[Online; accessed 9-September-2021]"
+}
+
+
+@misc
+{
+	wiki_rtree,
+	author = "{Wikipedia contributors}",
+	title = {{R-tree --- {Wikipedia}{,} The Free Encyclopedia}},
+	year = "2021",
+	url = "https://en.wikipedia.org/w/index.php?title=R-tree&oldid=1039468457",
+	note = "[Online; accessed 9-September-2021]"
+}
+
+
+@misc
+{
+	wiki_rstartree,
+	author = "{Wikipedia contributors}",
+	title = {{R* tree --- {Wikipedia}{,} The Free Encyclopedia}},
+	year = "2021",
+	url = "https://en.wikipedia.org/w/index.php?title=R*_tree&oldid=1027725132",
+	note = "[Online; accessed 9-September-2021]"
+}
+
+
+@misc
+{
 	web_aabb,
 	author = {{Mozilla Developer Network Web Docs}},
 	title = {{3D collision detection}},
