--- a/tex/algos.tex
+++ b/tex/algos.tex
@@ -577,8 +577,9 @@ are balanced with respect to their heights -- dual-logarithmic in time for searc
 and removing an element \cite{wiki_avl, wiki_redblack}.
 
 In $k$ dimensions, there are several generalisations of search trees, among them the 
-\textit{BSP tree} \cite[Ch. 12, pp. 259-281]{Berg2008}, the \textit{k-d tree} \cite[Ch. 5.2, pp. 99-105]{Berg2008}, 
-and the \textit {R-tree} \cite{wiki_rtree}.
+\textit{BSP tree} \cite[Ch. 12, pp. 259-281]{Berg2008} and the \textit{k-d tree} \cite[Ch. 5.2, pp. 99-105]{Berg2008}
+as examples of multi-dimensional binary search trees, as well as the non-binary
+\textit {R-tree} \cite{wiki_rtree}.
 
 
 \paragraph{BSP tree}
@@ -601,12 +602,17 @@ $x_1 = const.$ plane. The only freedom is to choose the respective constant offs
 plane to have the tree optimally balanced.
 A $k$-d tree of $n$ objects can be created with an upper bound in time complexity of 
 $\mathcal{O}\left( n \log_2 n \right)$ and has a storage complexity linear in $n$,
-its query time lies in $\mathcal{O}\left( n^{1-1/k} + r \right)$, where $r$ is the number of
+its range query time lies in $\mathcal{O}\left( n^{1-1/k} + r \right)$, where $r$ is the number of
 objects that are found by the query \cite[p. 105]{Berg2008}.
 
 
 \paragraph{R-tree}
-TODO
+R-tree stands for rectangle tree and is named for its use of (hyper-)rectangles grouping objects \cite{wiki_rtree}.
+Each node in the tree has a hyperrectangle assigned to it which serves as axis-aligned bounding box
+for all the objects it contains in its child nodes. The rectangular bounding boxes for the nodes at the
+same height may overlap, and the key to efficiency in this kind of tree is a good insertion algorithm
+which minimises such a overlap. The most prominent of these overlap-minimised data structures is the
+so-called \textit{R* tree} \cite{wiki_rstartree}.
 
 
 
