--- a/tex/notation.tex
+++ b/tex/notation.tex
@@ -61,6 +61,8 @@ Table \ref{tab:abbreviations} lists abbreviations that are used in this work.
 		\hline
 		\bf{Abbreviation} & \bf{Explanation} \tabularnewline
 		\hline
+		API		 & \underline{A}plication \underline{P}rogramming \underline{I}nterface. \tabularnewline
+		\hline
 		APSP		 & \underline{A}ll \underline{P}airs \underline{S}hortest \underline{Path}. \tabularnewline
 		\hline
 		CLI              & \underline{C}ommand \underline{L}ine \underline{I}nterface. \tabularnewline
